--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Anton|Baskervville|Raleway&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   <title>Faqiri-portfolio</title>
 </head>
 <body>
@@ -22,19 +24,19 @@
   <section id="projects" class="projects">
     <h2>These are my some project</h2>
     <div class="project-grid">
-      <a href="">
-        <img class="project-img" src="./images/su.JPG" alt="tribute-page"/>
+      <a href="https://github.com/faridafaqiri/survey-form" target="_blank">
+        <img class="project-img" src="./images/su.JPG" alt="survey-form"/>
         <p class="project-tile">Survey Form</p>
       </a>
-      <a href="">
+      <a href="https://github.com/faridafaqiri/Tribute-page" target="_blank">
         <img class="project-img" src="./images/ma.JPG" alt="tribute-page"/>
         <p class="project-tile">Tribute Page</p>
       </a>
-      <a href="">
+      <a href="https://github.com/faridafaqiri/Technical-documentation-page" target="_blank">
         <img class="project-img" src="./images/php2.JPG" alt="technical-documentation-page"/>
         <p class="project-tile">Technical-documentation-page</p>
       </a>
-      <a href="">
+      <a href="https://github.com/faridafaqiri/product-landing-page" target="_blank">
         <img class="project-img" src="./images/food.JPG" alt="product-landing-page"/>
         <p class="project-tile">product-landing-page</p>
       </a>
@@ -45,12 +47,17 @@
       <h2>Let's work together...</h2>
       <p id="contact-p">How do you take your coffee?</p>
     </div>
-    <div id="contact-links">
-      <a href="" id="profile-link" target="_blank">Github</a>
-      <a href="" id="profile-link" target="_blank">Facebbok</a>
-      <a href="" id="profile-link" target="_blank">Send a Email</a>
-      <a href="" id="profile-link" target="_blank">Witter</a>
-      <a href="" id="profile-link" target="_blank">Call me</a>
+    <div id="profile-link">
+      <a href="https://www.facebook.com/profile.php?id=61560208433931" target="_blank">
+        <i class="fab fa-facebook"></i>Facebook</a>
+      <a href="https://twitter.com/" target="_blank">
+        <i class="fab fa-twitter"></i>Twitter</a>
+      <a href="https://instagram.com/" target="_blank">
+        <i class="fab fa-instagram"></i>Instagram</a>
+      <a href="https://www.linkedin.com/" target="_blank">
+        <i class="fab fa-linkedin-in"></i>Linkdin</a>
+      <a href="https://www.youtube.com/" target="_blank">
+        <i class="fab fa-youtube"></i>Youtube</a>
     </div>
   </section>
 </body>
