fixed the linters errors

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Anton|Baskervville|Raleway&display=swap" rel="stylesheet">
+  <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton|Baskervville|Raleway&display=swap">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   <title>Faqiri-portfolio</title>
 </head>
@@ -15,7 +15,6 @@
         <li><a href="#projects" class="nav-link">Projects</a></li>
         <li><a href="#contact" class="nav-link">Contact</a></li>
       </ul>
-      
     </nav>
   <section id="weclome-section">
     <h1>Hi! I'm Farida Faqiri</h1>
@@ -24,19 +23,19 @@
   <section id="projects" class="projects">
     <h2>These are my some project</h2>
     <div class="project-grid">
-      <a href="https://github.com/faridafaqiri/survey-form" target="_blank">
+      <a href="https://github.com/faridafaqiri/survey-form" target="_blank" rel="noopener">
         <img class="project-img" src="./images/su.JPG" alt="survey-form"/>
         <p class="project-tile">Survey Form</p>
       </a>
-      <a href="https://github.com/faridafaqiri/Tribute-page" target="_blank">
+      <a href="https://github.com/faridafaqiri/Tribute-page" target="_blank" rel="noopener">
         <img class="project-img" src="./images/ma.JPG" alt="tribute-page"/>
         <p class="project-tile">Tribute Page</p>
       </a>
-      <a href="https://github.com/faridafaqiri/Technical-documentation-page" target="_blank">
+      <a href="https://github.com/faridafaqiri/Technical-documentation-page" target="_blank" rel="noopener">
         <img class="project-img" src="./images/php2.JPG" alt="technical-documentation-page"/>
         <p class="project-tile">Technical-documentation-page</p>
       </a>
-      <a href="https://github.com/faridafaqiri/product-landing-page" target="_blank">
+      <a href="https://github.com/faridafaqiri/product-landing-page" target="_blank" rel="noopener">
         <img class="project-img" src="./images/food.JPG" alt="product-landing-page"/>
         <p class="project-tile">product-landing-page</p>
       </a>
@@ -48,15 +47,15 @@
       <p id="contact-p">How do you take your coffee?</p>
     </div>
     <div id="profile-link">
-      <a href="https://www.facebook.com/profile.php?id=61560208433931" target="_blank">
+      <a href="https://www.facebook.com/profile.php?id=61560208433931" target="_blank" rel="noopener">
         <i class="fab fa-facebook"></i>Facebook</a>
-      <a href="https://twitter.com/" target="_blank">
+      <a href="https://twitter.com/" target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>Twitter</a>
-      <a href="https://instagram.com/" target="_blank">
+      <a href="https://instagram.com/" target="_blank" rel="noopener">
         <i class="fab fa-instagram"></i>Instagram</a>
-      <a href="https://www.linkedin.com/" target="_blank">
+      <a href="https://www.linkedin.com/" target="_blank" rel="noopener">
         <i class="fab fa-linkedin-in"></i>Linkdin</a>
-      <a href="https://www.youtube.com/" target="_blank">
+      <a href="https://www.youtube.com/" target="_blank" rel="noopener">
         <i class="fab fa-youtube"></i>Youtube</a>
     </div>
   </section>
