fixed the linters error in css file

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
     <div class="project-grid">
       <a href="https://github.com/faridafaqiri/survey-form" target="_blank" rel="noopener">
         <img class="project-img" src="./images/su.JPG" alt="survey-form"/>
-        <p class="project-tile">Survey Form</p>
+        <p class="project-tile" id="project-title">Survey Form</p>
       </a>
       <a href="https://github.com/faridafaqiri/Tribute-page" target="_blank" rel="noopener">
         <img class="project-img" src="./images/ma.JPG" alt="tribute-page"/>
-        <p class="project-tile">Tribute Page</p>
+        <p class="project-tile" id="project-title">Tribute Page</p>
       </a>
       <a href="https://github.com/faridafaqiri/Technical-documentation-page" target="_blank" rel="noopener">
         <img class="project-img" src="./images/php2.JPG" alt="technical-documentation-page"/>
-        <p class="project-tile">Technical-documentation-page</p>
+        <p class="project-tile" id="project-title">Technical-documentation-page</p>
       </a>
       <a href="https://github.com/faridafaqiri/product-landing-page" target="_blank" rel="noopener">
         <img class="project-img" src="./images/food.JPG" alt="product-landing-page"/>
-        <p class="project-tile">product-landing-page</p>
+        <p class="project-tile" id="project-title">product-landing-page</p>
       </a>
     </div>
   </section>
