sloved the html linters

--- a/index.html
+++ b/index.html
@@ -49,14 +49,12 @@
     <div id="profile-link">
       <a href="https://www.facebook.com/profile.php?id=61560208433931" target="_blank" rel="noopener">
         <i class="fab fa-facebook"></i>Facebook</a>
-      <a href="https://twitter.com/" target="_blank" rel="noopener">
-        <i class="fab fa-twitter"></i>Twitter</a>
       <a href="https://instagram.com/" target="_blank" rel="noopener">
         <i class="fab fa-instagram"></i>Instagram</a>
       <a href="https://www.linkedin.com/" target="_blank" rel="noopener">
         <i class="fab fa-linkedin-in"></i>Linkdin</a>
-      <a href="https://www.youtube.com/" target="_blank" rel="noopener">
-        <i class="fab fa-youtube"></i>Youtube</a>
+      <a href="https://www.githubcom/" target="_blank" rel="noopener">
+        <i class="fab fa-github"></i>Github</a>
     </div>
   </section>
 </body>
